--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".features.MainFragment">
+    tools:context=".features.main_page.MainFragment">
 
 
     <LinearLayout
@@ -50,14 +50,5 @@
             tools:listitem="@layout/items_page_adapter" />
 
     </LinearLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="20dp"
-        android:contentDescription="@string/add"
-        android:src="@drawable/add_sign" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
