--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
+    android:label="Database"
     app:startDestination="@id/mainFragment2">
 
     <fragment
         android:id="@+id/mainFragment2"
-        android:name="com.android_a865.estimatescalculator.features.MainFragment"
-        android:label="fragment_main"
+        android:name="com.android_a865.estimatescalculator.features.main_page.MainFragment"
         tools:layout="@layout/fragment_main" />
 </navigation>
