--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,11 @@
         <action
             android:id="@+id/action_mainFragment2_to_selectingFragment"
             app:destination="@id/selectingFragment" />
+        <argument
+            android:name="path"
+            app:argType="com.android_a865.estimatescalculator.utils.Path"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/newItemFragment"
