--- a/app/src/main/res/layout/adapter_chosen_items.xml
+++ b/app/src/main/res/layout/adapter_chosen_items.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_margin="16dp"
+    android:layout_margin="8dp"
     android:padding="8dp"
-
+    android:background="@drawable/rounded_green_background"
     android:gravity="center_vertical"
 
     xmlns:tools="http://schemas.android.com/tools">
