--- a/app/src/main/res/layout/fragment_items_choose.xml
+++ b/app/src/main/res/layout/fragment_items_choose.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.items_choose.ItemsChooseFragment">
+    tools:context=".presentation.items_choose.ItemsChooseFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
