--- a/app/src/main/res/layout/fragment_selecting.xml
+++ b/app/src/main/res/layout/fragment_selecting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".features.selecting.SelectingFragment">
+    tools:context=".presentation.selecting.SelectingFragment">
 
 
     <androidx.appcompat.widget.Toolbar
