--- a/app/src/main/res/layout/adapter_chosen_items.xml
+++ b/app/src/main/res/layout/adapter_chosen_items.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_margin="8dp"
-    android:padding="8dp"
-    android:background="@drawable/rounded_green_background"
+    android:layout_margin="5dp"
+    android:padding="5dp"
+    android:background="@drawable/rounded_white_background"
     android:gravity="center_vertical"
 
     xmlns:tools="http://schemas.android.com/tools">
