--- a/app/src/main/res/layout/fragment_items_choose.xml
+++ b/app/src/main/res/layout/fragment_items_choose.xml
@@ -66,7 +66,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chosenItemsList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:orientation="horizontal"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
@@ -77,7 +77,7 @@
     </LinearLayout>
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <!--com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="20dp"
         android:contentDescription="Save"
-        android:src="@drawable/add_sign" />
+        android:src="@drawable/add_sign" /-->
 
 
 </RelativeLayout>
