--- a/app/src/main/res/layout/fragment_new_estimate.xml
+++ b/app/src/main/res/layout/fragment_new_estimate.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.new_estimate.NewEstimateFragment">
 
 
@@ -12,6 +13,16 @@
         android:layout_height="match_parent"
         android:paddingBottom="60dp"
         android:clipToPadding="true">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/mainToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/design_default_color_primary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:title="@null"/>
+
 
         <TextView
             android:layout_width="match_parent"
@@ -67,10 +78,6 @@
 
     </LinearLayout>
 
-
-
-
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -78,7 +85,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="20dp"
         android:contentDescription="Save"
-        android:src="@drawable/pdf_icon" />
+        android:src="@drawable/ok" />
 
 
 </FrameLayout>
