adding InvoicesViewFragment.kt and more related classes
now the invoices are displayed and can be edited or added

--- a/app/src/main/res/menu/main_page_options.xml
+++ b/app/src/main/res/menu/main_page_options.xml
@@ -18,4 +18,9 @@
         android:title="@string/new_estimate"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/myEstimate"
+        android:title="@string/my_estimates"
+        app:showAsAction="never" />
+
 </menu>
