--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".feature_main.presentation.new_folder.NewFolderFragment">
+    tools:context=".feature_client.presentation.clients_view.ClientsFragment">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/mainToolBar"
@@ -20,21 +20,15 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/folder_name_et"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/clients_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp">
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="50dp"
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/folder_name"
-                android:inputType="text"
-                android:padding="16dp"
-                />
+            tools:listitem="@layout/adapter_clients_view" />
 
-        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
@@ -45,7 +39,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
         android:contentDescription="Save"
-        android:src="@drawable/ok" />
+        android:src="@drawable/add_sign" />
 
 
 </FrameLayout>
