--- a/app/src/main/res/layout/fragment_new_item.xml
+++ b/app/src/main/res/layout/fragment_new_item.xml
@@ -20,23 +20,39 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        <EditText
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/item_name_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/item_name"
-            android:padding="20dp"
-            android:inputType="text"
-            android:importantForAutofill="no" />
+            android:layout_margin="16dp">
 
-        <EditText
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/item_name"
+                android:inputType="text"
+                android:padding="16dp"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/item_price_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/item_price"
-            android:padding="20dp"
-            android:inputType="numberDecimal"
-            android:importantForAutofill="no" />
+            android:layout_margin="16dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/item_price"
+                android:inputType="numberDecimal"
+                android:padding="16dp"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
     </LinearLayout>
 
