--- a/app/src/main/res/layout/fragment_new_estimate.xml
+++ b/app/src/main/res/layout/fragment_new_estimate.xml
@@ -16,29 +16,54 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="@null" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="@string/items"
-        android:textSize="20sp"
-        android:textStyle="italic|bold" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_item"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        tools:listitem="@layout/adapter_new_estimate" />
+        android:layout_weight="1">
 
-    <Button
-        android:id="@+id/add_items"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/add_items"
-        android:textAllCaps="false" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_invoice_types"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_blue_dark"
+                android:padding="16dp"
+                tools:text="Estimate"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="20dp"
+                android:text="@string/items"
+                android:textSize="20sp"
+                android:textStyle="italic|bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="100dp"
+                tools:itemCount="5"
+                tools:listitem="@layout/adapter_new_estimate" />
+
+            <Button
+                android:id="@+id/add_items"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/add_items"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,6 +89,5 @@
 
 
     </LinearLayout>
-
 
 </LinearLayout>
