--- a/app/src/main/res/layout/adapter_invoice_view.xml
+++ b/app/src/main/res/layout/adapter_invoice_view.xml
@@ -9,13 +9,38 @@
     android:padding="16dp"
     android:elevation="15dp">
 
-    <TextView
-        android:id="@+id/invoice_date"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical">
+
+        <Button
+            android:id="@+id/btn_edit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/edit"
+            />
+
+
+        <TextView
+            android:id="@+id/tv_invoice_date"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            tools:text="14/10/2021"
+            android:gravity="end"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_client_name"
         android:padding="16dp"
-        tools:text="14/10/2021"
-        android:layout_gravity="end"/>
+        tools:text="John Wick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemsList"
