--- a/app/src/main/res/layout/fragment_add_edit_client.xml
+++ b/app/src/main/res/layout/fragment_add_edit_client.xml
@@ -35,6 +35,7 @@
                     android:id="@+id/et_client_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_margin="16dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -50,6 +51,7 @@
                     android:id="@+id/et_organization"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_margin="16dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -65,6 +67,7 @@
                     android:id="@+id/et_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_margin="16dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -80,6 +83,7 @@
                     android:id="@+id/et_phone1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_margin="16dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -95,6 +99,7 @@
                     android:id="@+id/et_phone2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_margin="16dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -110,6 +115,7 @@
                     android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_margin="16dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -125,6 +131,7 @@
                     android:id="@+id/et_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_margin="16dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -149,7 +156,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
-        android:contentDescription="Save"
+        android:contentDescription="@string/save"
         android:src="@drawable/ok" />
 
 
