--- a/app/src/main/res/layout/fragment_new_item.xml
+++ b/app/src/main/res/layout/fragment_new_item.xml
@@ -25,6 +25,7 @@
             android:id="@+id/item_name_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_margin="16dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -41,6 +42,7 @@
             android:id="@+id/item_price_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_margin="16dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -62,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
-        android:contentDescription="Save"
+        android:contentDescription="@string/save"
         android:src="@drawable/ok" />
 
 
