--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -134,7 +134,7 @@
     <fragment
         android:id="@+id/invoicesViewFragment"
         android:name="com.android_a865.estimatescalculator.feature_main.presentation.invoices_view.InvoicesViewFragment"
-        android:label="@string/my_estimates"
+        android:label="@string/estimates"
         tools:layout="@layout/fragment_invoices_view" >
         <action
             android:id="@+id/action_invoicesViewFragment_to_newEstimateFragment"
@@ -143,7 +143,7 @@
     <fragment
         android:id="@+id/clientsFragment"
         android:name="com.android_a865.estimatescalculator.feature_client.presentation.clients_view.ClientsFragment"
-        android:label="@string/my_clients"
+        android:label="@string/clients"
         tools:layout="@layout/fragment_clients" >
         <action
             android:id="@+id/action_clientsFragment_to_addEditClientFragment"
