empty list place holder

--- a/app/src/main/res/layout/fragment_invoices_view.xml
+++ b/app/src/main/res/layout/fragment_invoices_view.xml
@@ -32,6 +32,16 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_invoices"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:layout_margin="16dp"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
