--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -6,11 +6,18 @@
 
     <item
         android:id="@+id/myEstimate"
-        android:title="@string/estimates" />
+        android:title="@string/estimates"
+        android:icon="@drawable/ic_invoice"/>
 
     <item
         android:id="@+id/myClients"
-        android:title="@string/clients" />
+        android:title="@string/clients"
+        android:icon="@drawable/ic_client"/>
+
+    <item
+        android:id="@+id/settings"
+        android:title="@string/settings"
+        android:icon="@drawable/ic_settings"/>
 
 
 </menu>
