-Display company info and client info on the invoice -display invoice type -update invoices client on client update

--- a/app/src/main/res/menu/client_view_options.xml
+++ b/app/src/main/res/menu/client_view_options.xml
@@ -14,5 +14,11 @@
         android:title="@string/delete"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/add"
+        android:icon="@drawable/add_sign"
+        android:title="@string/add"
+        app:showAsAction="ifRoom" />
+
 
 </menu>
