--- a/app/src/main/res/layout/adapter_invoice_view.xml
+++ b/app/src/main/res/layout/adapter_invoice_view.xml
@@ -23,6 +23,12 @@
             android:background="@drawable/edit"
             />
 
+        <TextView
+            android:id="@+id/tv_invoice_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            tools:text="Estimate" />
 
         <TextView
             android:id="@+id/tv_invoice_date"
